completed single lisitng page

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load humanize %}
 {% block content%}
- <!-- Showcase -->
+
+<!-- Showcase -->
   <section id="showcase">
     <div class="container text-center">
       <div class="home-search p-5">
@@ -181,10 +182,7 @@
           <p>No listings avaliable</p></div>
 
        {% endif %}
-         
-        
-
-       
+	   </section>
 
   <section id="services" class="py-5 bg-secondary text-white">
     <div class="container">
