--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -20,7 +20,7 @@
           
         </li>
         <li 
-          {% if '/about' == request.path %}
+          {% if 'about' in request.path %}
           class="nav-item active mr-3">
           {% else %}
           class='nav-item mr-3'>
@@ -28,7 +28,7 @@
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
           <li 
-          {% if '/listings' == request.path %}
+          {% if 'listings' in request.path %}
           class="nav-item active mr-3">
           {% else %}
           class='nav-item mr-3'>
@@ -38,12 +38,20 @@
       </ul>
 
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item mr-3">
-          <a class="nav-link" href="register.html">
+        <li   {% if 'register' in request.path %}
+          class="nav-item active mr-3">
+          {% else %}
+          class='nav-item mr-3'>
+          {% endif %}>
+          <a class="nav-link" href="{% url 'register' %}">
             <i class="fas fa-user-plus"></i> Register</a>
         </li>
-        <li class="nav-item mr-3">
-          <a class="nav-link" href="login.html">
+        <li   {% if 'login' in request.path %}
+          class="nav-item active mr-3">
+          {% else %}
+          class='nav-item mr-3'>
+          {% endif %}>
+          <a class="nav-link" href="{% url 'login' %}">
             <i class="fas fa-sign-in-alt"></i>
 
             Login</a>
