--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content%}
+{% block title %}
+| Browse Listings
+{% endblock title %}
 {% load humanize %}
 
   <!-- Breadcrumb -->
