--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}
+| About Us
+{% endblock title %}
 {% block content%}
 <!-- Breadcrumb -->
   <section id="bc" class="mt-3">
